...
        <item>Circle</item>
        <item>Oval</item>
    </string-array>
    <string name="string_area">Area</string>

    <!--Error messages-->
    <string name="toast_EnterValue">Please, enter value(s)…</string>
    <string name="toast_EqualValues_Parallelogram">Side A and Height cannot be equal…</string>
    <string name="toast_EqualValues_Trapezoid">Sides A and B cannot be equal…</string>
    <string name="toast_EqualValues_IsoscelesTrapezoid">Sides A and B cannot be equal…</string>
    <string name="toast_EqualValues_IsoscelesTriangle">Sides A and B cannot be equal…</string>
    <string name="toast_EqualValues_Oval">Semi-axes r1 and r2 cannot be equal…</string>

    <!--Hints-->
    <string name="hint_enter_side_a">enter side a</string>
    <string name="hint_enter_side_b">enter side b</string>
    <string name="hint_enter_height">enter height</string>
    <string name="hint_enter_radius">enter radius</string>
    <string name="hint_enter_diagonal_1">enter diagonal 1</string>
    <string name="hint_enter_diagonal_2">enter diagonal 2</string>
    <string name="hint_enter_semi_axis_r1">enter semi-axis r1</string>
    <string name="hint_enter_semi_axis_r2">enter semi-axis r2</string>

    <!--Shape 2D strings for internationalization-->
    <string name="shape_square">Square</string>
    <string name="shape_rectangle">Rectangle</string>
    <string name="shape_parallelogram">Parallelogram</string>
    <string name="shape_rhombus">Rhombus</string>
    <string name="shape_equilateral_triangle">Equilateral Triangle</string>
    <string name="shape_isosceles_triangle">Isosceles Triangle</string>
    <string name="shape_triangle">Triangle</string>
    <string name="shape_isosceles_trapezoid">Isosceles Trapezoid</string>
    <string name="shape_trapezoid">Trapezoid</string>
    <string name="shape_regular_pentagon">Regular Pentagon</string>
    <string name="shape_hexagon">Hexagon</string>
    <string name="shape_circle">Circle</string>
    <string name="shape_oval">Oval</string>

</resources>
