...
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".CalculatorActivity">

    <Spinner
        android:id="@+id/spinnerShapes2D"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spinner_layout_marginStart_port"
        android:layout_marginTop="@dimen/spinner_layout_marginTop_port"
        android:layout_marginEnd="@dimen/spinner_layout_marginEnd_port"
        android:contentDescription="@string/desc_spinner_shapes_2d"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Side A-->
    <EditText
        android:id="@+id/editTextSideA"
        style="@style/edit_text_default_port"
        android:autofillHints="false"
        android:hint="@string/hint_enter_side_a"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/spinnerShapes2D"
        tools:visibility="invisible" />

    <!--Side B-->
    <EditText
        android:id="@+id/editTextSideB"
        style="@style/edit_text_default_port"
        android:autofillHints="false"
        android:hint="@string/hint_enter_side_b"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/editTextSideA"
        tools:visibility="invisible" />

    <!--Height-->
    <EditText
        android:id="@+id/editTextHeight"
        style="@style/edit_text_default_port"
        android:autofillHints="false"
        android:hint="@string/hint_enter_height"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/editTextSideB"
        tools:visibility="visible" />

    <!--Side Radius-->
    <EditText
        android:id="@+id/editTextRadius"
        style="@style/edit_text_default_port"
        android:autofillHints="false"
        android:hint="@string/hint_enter_radius"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/editTextHeight"
        tools:visibility="gone" />

    <!--Diagonal 1-->
    <EditText
        android:id="@+id/editTextDiagonal1"
        style="@style/edit_text_default_port"
        android:autofillHints="false"
        android:hint="@string/hint_enter_diagonal_1"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/spinnerShapes2D"
        tools:visibility="invisible" />

    <!--Diagonal 2-->
    <EditText
        android:id="@+id/editTextDiagonal2"
        style="@style/edit_text_default_port"
        android:autofillHints="false"
        android:hint="@string/hint_enter_diagonal_2"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/editTextDiagonal1"
        tools:visibility="invisible" />

    <!--Semi-Axis r1-->
    <EditText
        android:id="@+id/editTextSemiAxis1"
        style="@style/edit_text_default_port"
        android:autofillHints="false"
        android:hint="@string/hint_enter_semi_axis_r1"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/spinnerShapes2D"
        tools:visibility="visible" />

    <!--Semi-Axis r2-->
    <EditText
        android:id="@+id/editTextSemiAxis2"
        style="@style/edit_text_default_port"
        android:autofillHints="false"
        android:hint="@string/hint_enter_semi_axis_r2"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/editTextSemiAxis1"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_marginTop_port"
        android:text="@string/button_calculate"
        android:textColor="@color/textColor_Button"
        android:textSize="@dimen/button_textSize_port"
        app:layout_constraintEnd_toEndOf="@+id/spinnerShapes2D"
        app:layout_constraintStart_toStartOf="@+id/spinnerShapes2D"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_marginTop_port"
...
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate">

        <ImageView
            android:id="@+id/imageViewShape2d"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_image_shapes_2d"
            android:src="@drawable/rhombus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
